[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sampleplugin"
version = "0.0.1"
authors = [
  { name="Seban Sunny", email="seban.sunny@gmail.com" },
]
description = "An example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SebanSunny/gcp-artifact-registry-sample"
"Bug Tracker" = "https://github.com/SebanSunny/gcp-artifact-registry-sample/issues"